# social_platform

Clientdilg/: CMakeLists.txt  Clientdlg.cpp  Clientdlg.h  everyone.h  friendwidget.cpp  friendwidget.h  image.qrc  logindlg_plugin.cpp  logindlg_plugin.h  main.cpp  mainwidget.cpp  mainwidget.h  settingwidget.cpp  settingwidget.h  special.h  style.css  talkwidget.cpp  talkwidget.h
social_platform/: CMakeLists.txt  main.cpp
social_platform/SmtpMime/: CMakeLists.txt
social_platform/databasepool/: CMakeLists.txt  connectionpool.cpp  connectionpool.h
social_platform/mainwidget/: CMakeLists.txt  mainwidget.cpp  mainwidget.h
social_platform/server/: CMakeLists.txt  analysisdata.cpp  analysisdata.h  encipher.cpp  encipher.h  resultcode.h  server.cpp  server.h
